--- a/user/actualizardatosuser.html
+++ b/user/actualizardatosuser.html
@@ -345,14 +345,14 @@
 								<span class="mdl-textfield__error">Invalid address</span>
 							</div>
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-								<input class="mdl-textfield__input" type="number" minlength="10">
+								<input class="mdl-textfield__input" type="number" id="serial">
 								<label class="mdl-textfield__label" for="carnet">Serial del Carnet de la Patria</label>
-								<span class="mdl-textfield__error">Inválido Carnet de la Patria</span>
+								<span class="error" id="error2"></span>
 							</div>
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-								<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?">
-								<label class="mdl-textfield__label" for="numerotlf">Numero de Teléfono</label>
-								<span class="mdl-textfield__error">Inválido télefono</span>
+								<input class="mdl-textfield__input" type="tel" id="telefono">
+								<label class="mdl-textfield__label" for="numerotlf">Número de Teléfono</label>
+								<span class="error" id="error3"></span>
 							</div>
 
 							<h5 class="text-condensedLight">Ubicación de la Persona</h5>
@@ -387,9 +387,9 @@
 							
 							
 							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-								<input class="mdl-textfield__input" type="email" id="email">
+								<input class="mdl-textfield__input" type="email" id="correo">
 								<label class="mdl-textfield__label" for="emailCompany">Correo Electrónico</label>
-								<span class="mdl-textfield__error">Inválido Correo</span>
+								<span class="error" id="error4"></span>
 							</div>
 
 							<h5 class="text-condensedLight">Ideología</h5>
@@ -440,59 +440,5 @@
 		</div>
 	</section>
 </body>
-<script>
-// ---------------------------------------------------Validación de Nombre---------------------------------
-// Obtener el elemento input por su id
-var inputNombre = document.getElementById("nombre");
-
-// Obtener el elemento span por su id
-var spanError = document.getElementById("error");
-
-// Agregar un evento de input al input
-inputNombre.addEventListener("input", function() {
-  // Obtener el valor del input
-  var valor = inputNombre.value;
-
-  // Crear una expresión regular para validar el nombre
-  // Solo se permiten letras y espacios
-  var regex = /^[a-zA-Z\s]+$/;
-
-  // Comprobar si el valor cumple con la expresión regular
-  var valido = regex.test(valor);
-
-  // Si no es válido, mostrar un mensaje de error en el span
-  if (!valido) {
-    spanError.textContent = "El nombre no puede contener números ni caracteres especiales";
-  } else {
-    // Si es válido, borrar el mensaje de error
-    spanError.textContent = "";
-  }
-});
-
-var inputapellido = document.getElementById("apellido");
-
-// Obtener el elemento span por su id
-var spanError1 = document.getElementById("error1");
-
-// Agregar un evento de input al input
-inputapellido.addEventListener("input", function() {
-  // Obtener el valor del input
-  var valor = inputapellido.value;
-
-  // Crear una expresión regular para validar el nombre
-  // Solo se permiten letras y espacios
-  var regex = /^[a-zA-Z\s]+$/;
-
-  // Comprobar si el valor cumple con la expresión regular
-  var valido = regex.test(valor);
-
-  // Si no es válido, mostrar un mensaje de error en el span
-  if (!valido) {
-    spanError1.textContent = "El nombre no puede contener números ni caracteres especiales";
-  } else {
-    // Si es válido, borrar el mensaje de error
-    spanError1.textContent = "";
-  }
-});
-  </script>
+<script src="./js/actualizardatouser.js"></script>
 </html>
